Fixing issue on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,8 @@ nav a {
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 nav a:hover {
